2014-04-13  Youenn Fablet  <youenn.fablet@crf.canon.fr>

        [GStreamer] No CORS support for media elements
        https://bugs.webkit.org/show_bug.cgi?id=99037

        Reviewed by Philippe Normand.

        http/tests/security/video-cross-origin-accessfailure.html verifies that cross-origin streams that fail CORS check
        are not played when crossorigin attribute is set.
         http/tests/security/video-cross-origin-accesssameorigin.html verifies that access to same-origin streams
        are played when crossorigin attribute is set.

        * http/tests/security/video-cross-origin-accessfailure-expected.txt: Added.
        * http/tests/security/video-cross-origin-accessfailure.html: Added.
        * http/tests/security/video-cross-origin-accesssameorigin-expected.txt: Added.
        * http/tests/security/video-cross-origin-accesssameorigin.html: Added.
        * platform/efl/TestExpectations: Enabled http/tests/security/video-cross-origin-readback.html.
        * platform/gtk/TestExpectations: Ditto.
        * platform/mac/TestExpectations: Disabled http/tests/security/video-cross-origin-accessfailure.html.

2014-03-21  Oliver Hunt  <oliver@apple.com>

        Fix semantics of JS execution when assigning an object to document.location
        https://bugs.webkit.org/show_bug.cgi?id=130213

        Reviewed by Geoffrey Garen.

        * fast/dom/navigation-with-sideeffects-expected.txt: Added.
        * fast/dom/navigation-with-sideeffects.html: Added.

2014-03-19  Antti Koivisto  <antti@apple.com>

        Crash with long selector list
        https://bugs.webkit.org/show_bug.cgi?id=123006

        Reviewed by Andreas Kling.

        * fast/css/long-selector-list-crash-expected.txt: Added.
        * fast/css/long-selector-list-crash.html: Added.

2014-03-18  Antti Koivisto  <antti@apple.com>

        Mutating rules returned by getMatchedCSSRules can result in crash
        https://bugs.webkit.org/show_bug.cgi?id=130209
